// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Should render a wide toast 1`] = `
<div>
  <div
    class="sc-gEvEer fhOJbX"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      I’m big and beautiful
    </div>
  </div>
</div>
`;

exports[`<Toast /> render default toast 1`] = `
<div>
  <div
    class="sc-gEvEer cKJCIq"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      Default content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render primary toast 1`] = `
<div>
  <div
    class="sc-gEvEer gBWKXk"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      primary
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render secondary toast 1`] = `
<div>
  <div
    class="sc-gEvEer cKJCIq"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      secondary
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-bottom animated toast 1`] = `
<div>
  <div
    class="sc-gEvEer hLGimo"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      from-bottom
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-left animated toast 1`] = `
<div>
  <div
    class="sc-gEvEer bzBQIr"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      from-left
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-right animated toast 1`] = `
<div>
  <div
    class="sc-gEvEer ggBycM"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      from-right
       content
    </div>
  </div>
</div>
`;

exports[`<Toast /> render with from-top animated toast 1`] = `
<div>
  <div
    class="sc-gEvEer rauSz"
  >
    <div
      class="sc-eqUAAy hCVxso"
      role="alert"
    >
      from-top
       content
    </div>
  </div>
</div>
`;
